# ACCESS-MOPPy

./: .codecov.yml  .coverage  .coveragerc  .gitignore  .gitmodules  CHANGELOG.rst  batch_config_Feb26_PI_CNP.yml  bug_report.md  cmorise_ilamb.py  github_issue_load_dataset_bugs.md  issue_dask_memory_pause.md  pr_description.md  pyproject.toml
.conda/: build_access_moppy.sh  meta.yaml
.github/workflows/: cd.yml  ci.yml  full-tests.yml
docs/: requirements.txt
docs/source/: CMORise_ILAMB_workflow.md  batch_processing.rst  conf.py  esmvaltool_integration.rst  getting_started.rst  ilamb_workflow.md  index.rst  mapping_reference.rst
notebooks/: Getting_started.ipynb  Ocean_variables_testing.ipynb  Tutorial1_CMORisation_ENSO_Recipes.ipynb  Tutorial_CM3.ipynb  Tutorial_CMORise_ILAMB_Variables.ipynb  Tutorial_ESMValTool_Integration.ipynb
scripts/: cmorise_oceanbgc.py  cmorise_tipmip.py  cmorise_tipmip_ocean.py  submit_cmorise.pbs  submit_cmorise_ocean.pbs  submit_cmorise_oceanbgc.pbs
src/access_moppy/: __init__.py  atmosphere.py  base.py  batch_cmoriser.py  driver.py  ocean.py  ocean_supergrid.py  sea_ice.py  tracking.py  utilities.py  vocabulary_processors.py
src/access_moppy/derivations/: __init__.py  calc_aerosol.py  calc_atmos.py  calc_land.py  calc_ocean.py  calc_seaice.py  calc_utils.py
src/access_moppy/esmval/: __init__.py  cli_commands.py  config_gen.py  file_finder.py  orchestrator.py  recipe_reader.py  variable_mapper.py
src/access_moppy/examples/: batch_config.yml  batch_config_atm_land_seaice_fx.yml  esmval_integration.yml  esmval_recipe_tas_timeseries.yml  ilamb_variables_cmorise.yml
src/access_moppy/legacy_utilities/: calc_hybrid_height_coeffs.py
src/access_moppy/mappings/: ACCESS-CM3_mappings.json  ACCESS-ESM1.6_mappings.json  ACCESS-OM3_mappings.json  cmip6_to_cmip7_compound_name_mapping.json  cmip7_to_cmip6_compound_name_mapping.json
src/access_moppy/resources/: fx.areacello_ACCESS-ESM.nc  fx.mrsofc_ACCESS-ESM.nc  land_ocean_mask_ACCESS-ESM.nc  ocean-2d-ht.nc
src/access_moppy/ressources/: fx.zfull_ACCESS-ESM.nc
src/access_moppy/templates/: cmor_job_script.j2  cmor_python_script.j2
tests/: README.md  conftest.py  test_smoke.py
tests/e2e/: test_end_to_end.py
tests/integration/: ocean_file_utils.py  test_cmoriser_integration.py  test_full_cmorisation.py
tests/mocks/: mock_data.py
tests/unit/: test_atmosphere.py  test_atmosphere_cmoriser.py  test_base.py  test_base_loading_chunker.py  test_batch_cmoriser.py  test_calc_hybrid_height_coeffs.py  test_calc_utils_monthly.py  test_check_for_updates.py  test_cmip6plus_vocabulary.py  test_derivations.py  test_derivations_calc_aerosol.py  test_derivations_calc_atmos.py  test_derivations_calc_land.py  test_derivations_calc_ocean.py  test_derivations_calc_seaice.py  test_derivations_calc_utils.py  test_driver.py  test_esmval_cli_commands.py  test_esmval_config_gen.py  test_esmval_file_finder.py  test_esmval_orchestrator.py  test_esmval_recipe_reader.py  test_esmval_variable_mapper.py  test_frequency_detection.py  test_missing_values.py  test_ocean.py  test_sea_ice.py  test_supergrid.py  test_temporal_resampling.py  test_to_iris.py  test_utilities.py  test_utilities_mappings.py  test_vocabulary_processors.py
